--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@binyamin/http-errors",
+	"name": "@binyamin/http-error",
 	"private": true,
 	"type": "module",
 	"version": "0.1.0",
@@ -19,7 +19,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/binyamin/http-errors"
+		"url": "https://github.com/binyamin/http-error"
 	},
 	"size-limit": [
 		{
